--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ set(CMAKE_CXX_STANDARD 17)
 add_library(${PROJECT_NAME} STATIC
 		src/commons/serialization.hh
 		src/buffer.cc src/commons/buffer.hh
+		src/events.cc src/commons/events.hh
 		src/misc.cc src/commons/misc.hh
 		src/stringtools.cc src/commons/stringtools.hh
 		src/fileio.cc src/commons/fileio.hh
