Start fixed point math class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ set(SRC
 		src/commons/dataBuffer.hh
 
 		src/commons/math/compound.hh
+		src/commons/math/fixed.hh
 		src/commons/math/general.hh
 		src/commons/math/glmconversion.hh
 		src/commons/math/interpolation.hh
